# fetch_gazebo

fetch_gazebo/launch/: home_env.launch  playground.launch  task_worlds.launch
fetch_gazebo/robots/: fetch_nodepth.gazebo.xacro
fetch_gazebo/scripts/: collide_robot.py  look_away.py  move_back.py
fetch_gazebo/worlds/: cube_0_cluttered_none_false_false_false_zone.sdf  cube_0_none_cluttered_false_false_false_zone.sdf  cube_0_none_none_false_false_false_zone.sdf  cube_0_none_none_false_false_true_zone.sdf  cube_0_none_none_true_false_false_zone.sdf  cube_0_none_none_true_true_false_zone.sdf  cube_1_cluttered_none_false_false_false_zone.sdf  cube_1_none_cluttered_false_false_false_zone.sdf  cube_1_none_none_false_false_false_zone.sdf  cube_1_none_none_true_false_false_zone.sdf  cube_1_none_none_true_true_false_zone.sdf  cube_2_cluttered_none_false_false_false_zone.sdf  cube_2_none_cluttered_false_false_false_zone.sdf  cube_2_none_none_true_false_false_zone.sdf  cube_2_none_none_true_true_false_zone.sdf  home.sdf  home_env.sdf  home_environment.sdf  task_bracket_0_0_0_zone.sdf  task_bracket_0_0_1_zone.sdf  task_bracket_0_0_2_zone.sdf  task_bracket_0_1_0_zone.sdf  task_bracket_0_2_0_zone.sdf  (+15 more)
fetch_gazebo_demo/: CMakeLists.txt  package.xml  setup.py
fetch_gazebo_demo/config/: simple_grasping.yaml
fetch_gazebo_demo/launch/: demo.launch  pick_place_demo.launch
fetch_gazebo_demo/scripts/: demo.py  pick_place_demo.py
fetch_gazebo_demo/src/fetch_gazebo_demo/: __init__.py  follow_trajectory_client.py  grasping_client.py  move_base_client.py  point_head_client.py
(+85 files in other folders)
